--- a/pom.xml
+++ b/pom.xml
@@ -18,17 +18,17 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.8.2</version>
+            <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
-
 
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.141.59</version>
+            <version>4.6.0</version>
         </dependency>
+
 
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
@@ -44,16 +44,13 @@
             <version>2.2.0</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-suite-engine</artifactId>
+            <artifactId>junit-platform-suite-api</artifactId>
             <version>1.8.1</version>
+            <scope>test</scope>
         </dependency>
 
-
     </dependencies>
-
-
 
 </project>
